--- a/login.html
+++ b/login.html
@@ -52,11 +52,11 @@
 								<table class="form">
                         <tbody><tr>
                                         <td><label for="username">Username:</label></td>
-                                        <td><input id="username" class="zLoginField" name="username" type="text" size="40" maxlength="1024" autocapitalize="none" autocorrect="off"></td>
+                                        <td><input id="username" class="zLoginField" name="username" required="required" type="text" size="40" maxlength="1024" autocapitalize="none" autocorrect="off"></td>
                                         </tr>
                                         <tr>
                                 <td><label for="password">Password:</label></td>
-                                <td><input id="password" autocomplete="off" class="zLoginField" name="password" type="password" value="" size="40" maxlength="1024"></td>
+                                <td><input id="password" autocomplete="off" class="zLoginField" name="password"  required="required" type="password" value="" size="40" maxlength="1024"></td>
                                 </tr>
                                 <tr>
                                 <td>&nbsp;</td>
